# gl30

MyEGL3Demo01/app/: CMakeLists.txt  build.gradle
MyEGL3Demo01/app/src/main/: AndroidManifest.xml
MyEGL3Demo01/app/src/main/assets/: image0.ktx  image2.ktx
MyEGL3Demo01/app/src/main/cpp/: MaETC2TextureMgr.cpp  MaETC2TextureMgr.h  native-lib.cpp
MyEGL3Demo01/app/src/main/cpp/libktx/: ktx.h
MyEGL3Demo01/app/src/main/cpp/utils/: file.c  file.h
MyEGL3Demo01/app/src/main/java/com/yc/myegl3demo01/: Activity_Blend.java  Activity_Etc2.java  Activity_Layout.java  Activity_Line.java  MainActivity.java
MyEGL3Demo01/app/src/main/java/com/yc/myegl3demo01/egl/: YCConfig.java  YCEglMgr.java  YCEngineEglWrap.java  YCLog.java  YCSurfaceMgr.java
MyEGL3Demo01/app/src/main/java/com/yc/myegl3demo01/gl/: YCApp.java  YCBaseNode.java  YCFbo.java  YCMSAAFbo.java  YCNode.java  YCOesNode.java  YCProgram.java  YCRGBA2YUVNode.java  YCTextureNode.java  YCUtils.java  YCYuvNode.java
MyEGL3Demo01/app/src/main/java/com/yc/myegl3demo01/gl3/: YCV3Node_Blend.java  YCV3Node_Etc2.java  YCV3Node_Layout.java  YCV3Node_Line.java
MyEGL3Demo01/app/src/main/java/com/yc/myegl3demo01/utils/: YCPointMgr.java
MyEGL3Demo01/app/src/main/res/layout/: activity_layout.xml  activity_line.xml  activity_main.xml
MyEGL3Demo01/app/src/main/res/raw/: image0.pkm
MyEGL3Demo01/app/src/main/res/values/: strings.xml
